--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ html {
   text-shadow: 0px 0px 0px transparent;
 }
 
-.options:hover {
+.options.clickable:hover {
   background: var(--options-hover-color);
   box-shadow: 0px 0px 0px transparent;
   text-shadow: 0px 0px 0px transparent;
